Fix errors in spacing

--- a/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/CheckoutPage/CheckoutPage.scss
@@ -112,7 +112,6 @@ font-weight: $font-weight-semi-bold;
 &__code {
   flex: 1 1 0%;
   border-radius: 0px;
-  // color: rgb(26, 26, 26);
   border: 1px solid rgb(117, 117, 117);
   padding: 1.375rem 1rem;
   min-height: 72px;
@@ -121,6 +120,7 @@ font-weight: $font-weight-semi-bold;
   font-size: 0.875rem;
   line-height: 1.625;
   letter-spacing: 0.5px;
+  width: 100%;
 }
 
 &__voucher-info {
@@ -187,6 +187,13 @@ font-weight: $font-weight-semi-bold;
   display: flex;
   align-items: center;
   gap:0.5rem;
+}
+
+&__disc-message {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0;
+gap: 0.5rem;
 }
 }
 
